Fixed some issues with tags on mobile devices

--- a/src/LinkDotNet.Blog.Web/Features/ShowBlogPost/ShowBlogPostPage.razor.css
+++ b/src/LinkDotNet.Blog.Web/Features/ShowBlogPost/ShowBlogPostPage.razor.css
@@ -1,17 +1,12 @@
-.blog-outer-box {
-    display: flex;
-    justify-content: center;
-    padding-top: 10px;
-}
 .blog-container {
-    background: white;
+    background: var(--white);
     width: clamp(60%, 2vw, 90%);
     box-shadow: 0 3px 7px -1px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
     padding: 20px;
 }
 
-.blogpost-date {
+.blogpost-metainformation {
     color: lightgrey;
 }
 
